samples/_failures_safe/1761428081_645f04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ace5335d.c: In function ‘main’:
./samples/SAFE/__tmp_ace5335d.c:137:24: error: missing terminating " character
  137 |                 printf("Error: Matrix dimensions incompatible for multiplication.\n
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ace5335d.c:137:17: error: expected expression at end of input
  137 |                 printf("Error: Matrix dimensions incompatible for multiplication.\n
      |                 ^~~~~~
./samples/SAFE/__tmp_ace5335d.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ace5335d.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ace5335d.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ace5335d.c:137:17: error: expected declaration or statement at end of input
